@@ -1,0 +1,37 @@
+# Earthworm Docker Sandbox CI
+image: debian:buster-slim
+
+services:
+  - docker:19.03.1-dind
+
+stages:
+  - build
+
+variables:
+  GIT_SUBMODULE_STRATEGY: normal
+  GIT_SUBMODULES: recursive
+  DOCKER_HOST: tcp://docker:2375
+  DOCKER_DRIVER: overlay2
+  DOCKER_TLS_CERTDIR: ""
+
+    # Run preliminary commands
+  before_script:
+    # Display system info
+    - apt-get clean \
+      && apt-get update \
+      && apt-get install -y \
+      make \
+      && apt-get clean
+  - uname -a
+  - make --version
+  - make check_required_commands
+
+  build:
+    stage: build
+    script:
+      - make build
+
+        # cache:
+        # paths:
+        # - dump/
+
